--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "cors": "^2.8.5",
     "nanoid": "^3.1.12",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -38,5 +39,6 @@
   },
   "devDependencies": {
     "dotenv": "^8.2.0"
-  }
+  },
+  "proxy": "http://localhost:9000"
 }
