--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "client": "cd client && npm run start"
   },
   "dependencies": {
+    "@types/cors": "^2.8.8",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "ejs": "~3.1.5",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "mongoose": "^5.10.8",
+    "morgan": "~1.9.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0"
   },
   "main": "app.js",
   "devDependencies": {},
