--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "client": "cd client && npm run start"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
     "@types/cors": "^2.8.8",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
