--- a/package.json
+++ b/package.json
@@ -18,8 +18,13 @@
     "ejs": "~3.1.5",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "jquery": "^3.5.1",
     "mongoose": "^5.10.8",
     "morgan": "~1.9.1",
+    "popper": "^1.0.1",
+    "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
+    "react-dom": "^16.13.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0"
   },
