--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "devstart": "nodemon ./bin/www",
     "server": "DEBUG=habitica-calendia:* npm run devstart",
     "client": "cd client && npm run start",
-    "heroku-postbuild": "cd client && npm install && npm run build"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false && cd client && npm install && npm run build"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
