--- a/client/package.json
+++ b/client/package.json
@@ -15,11 +15,14 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.2",
     "cors": "^2.8.5",
-    "nanoid": "^3.1.12",
+    "dayjs": "^1.9.3",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "typescript": "^4.0.3"
   },
   "scripts": {
     "start": "BROWSER=none react-scripts start",
