--- a/package.json
+++ b/package.json
@@ -11,20 +11,20 @@
   },
   "dependencies": {
     "@types/cors": "^2.8.8",
-    "cookie-parser": "~1.4.4",
+    "cookie-parser": "~1.4.5",
     "cors": "^2.8.5",
-    "debug": "~2.6.9",
+    "dayjs": "^1.9.3",
+    "debug": "~4.2.0",
     "dotenv": "^8.2.0",
     "ejs": "~3.1.5",
-    "express": "~4.16.1",
-    "http-errors": "~1.6.3",
+    "express": "~4.17.1",
+    "http-errors": "~1.8.0",
     "jquery": "^3.5.1",
-    "mongoose": "^5.10.8",
-    "morgan": "~1.9.1",
-    "popper": "^1.0.1",
-    "react": "^16.13.1",
+    "mongoose": "^5.10.9",
+    "morgan": "~1.10.0",
+    "react": "^16.14.0",
     "react-bootstrap": "^1.3.0",
-    "react-dom": "^16.13.1",
+    "react-dom": "^16.14.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0"
   },
