--- a/client/package.json
+++ b/client/package.json
@@ -4,31 +4,25 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.1",
-    "@fullcalendar/bootstrap": "^5.3.1",
-    "@fullcalendar/daygrid": "^5.3.2",
-    "@fullcalendar/interaction": "^5.3.1",
-    "@fullcalendar/list": "^5.3.1",
-    "@fullcalendar/react": "^5.3.1",
-    "@fullcalendar/timegrid": "^5.3.1",
+    "@fullcalendar/bootstrap": "^5.11.3",
+    "@fullcalendar/daygrid": "^5.11.3",
+    "@fullcalendar/interaction": "^5.11.3",
+    "@fullcalendar/list": "^5.11.3",
+    "@fullcalendar/react": "^5.11.2",
+    "@fullcalendar/timegrid": "^5.11.3",
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "bootstrap": "^4.5.2",
-    "cors": "^2.8.5",
+    "bootstrap": "^5.2.2",
     "dayjs": "^1.9.3",
-    "jquery": "^3.5.1",
-    "popper.js": "^1.16.1",
-    "react": "^16.13.1",
-    "react-bootstrap": "^1.3.0",
-    "react-dom": "^16.13.1",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.0.3"
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
+    "react-dom": "^18.2.0",
+    "wouter": "^2.8.0-alpha.2"
   },
   "scripts": {
-    "start": "BROWSER=none react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "vite",
+    "build": "vite build",
+    "serve": "vite preview"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -46,7 +40,11 @@
     ]
   },
   "devDependencies": {
-    "dotenv": "^8.2.0"
-  },
-  "proxy": "http://localhost:9000"
+    "@vitejs/plugin-react": "^2.1.0",
+    "dotenv": "^8.2.0",
+    "sass": "^1.55.0",
+    "vite": "^3.1.8",
+    "vite-plugin-svgr": "^2.2.2",
+    "vite-tsconfig-paths": "^3.5.1"
+  }
 }
