--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,8 @@
     "wouter": "^2.8.0-alpha.2"
   },
   "scripts": {
-    "start": "vite",
+    "start": "npx http-server ./build",
+    "dev": "vite",
     "build": "vite build",
     "serve": "vite preview"
   },
