--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "devstart": "nodemon ./bin/www",
-    "server": "set DEBUG=habitica-calendia:* & npm run devstart",
-    "client": "cd client && npm run start",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false && cd client && npm install && npm run build"
+    "start": "set NODE_ENV=production && node ./bin/www",
+    "dev:server": "set DEBUG=habitica-calendia:* && set NODE_ENV=development && nodemon ./bin/www",
+    "dev:client": "cd client && npm run dev",
+    "build-client": "cd client && npm install && npm run build",
+    "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\""
   },
   "dependencies": {
     "cookie-parser": "^1.4.6",
@@ -25,6 +25,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@types/cors": "^2.8.12"
+    "@types/cors": "^2.8.12",
+    "concurrently": "^7.4.0"
   }
 }
